# atelier_vision

./: .gitignore  README.md
bmcTrend/db/: 210118_Nissan_日産アリアにOTAを導入.json  210118_Other_Mack_TrucksがOTAを導入.json  210118_Other_et7を発表.json  210118_Tesla_MUC欠陥で15.8万台リコール要請.json  210119_Honda_GMと国内で自動運転モビリティサービス実証実験開始.json  210119_Mercedes_MM系課金パッケージ.json  210126_Other_ExcelforeのOTAの技術.json  210126_Other_いすゞがCASEでVolvoと連携.json  210127_Tesla_FSDをサブスク化することを発表.json  210127_Tesla_Model-S_X_の内装を一新（'21_4_LO予定）.json  210131_Other_韓国発の物体認識ソフト「SVNet」が世界880万車両で採用.json  210204_Honda_「天下一品」誤認識問題とOTA技術への期待.json  210217_Ford_Mustang_MACH-EのOTAシステム_HMI.json  210217_Mercedes_130万車両のリコールをSU対応（SOS機能）.json  210219_Audi_ビッグデータ活用_~路面状態から警告を行う~.json  210219_Bosch_BoschとMicrosoftが共同でOTA-SUプラットフォームを開発.json  210308_Ford_Mustang_Mach-Eにて一部所有者限定でOTAベータ配信の実施.json  210308_Other_自動運転Lv3の動向.json  210308_Tesla_Tesla-china_FSD付き車両の買い替えで次回FSD半額.json  210308_VW_ID.3_ID.4にてOTAソフトウェア更新を今夏から欧州で開始.json  210316_BMW_iDrive8からADAS機能OTA可能に.json  210316_Tesla_FSDは買替えで引き継げない.json  210331_Mazda_販売店入庫による無償有線ソフト更新を提供.json  210331_VW_Microsoftと提携し自動運転開発を加速.json
bmcTrend/py/: 2020-01-18-bmc.md  md2json.py
bmcTrend/src/: app.js  index.html  test.html  test.json  test.md
camBrowser/: cam.js  index.html
convolution/: CMakeLists.txt  convolution_test
convolution/src/: main.cpp
event2020/: index.css  index.html  index.js  startSwitch.css
excel/: README.md  index.html
movie2image/: CMakeLists.txt  m2i
opencv_cpp/: README.md
opencv_js/: index.html
rgb_world/: CMakeLists.txt
rgb_world/src/: main.cpp
(+44 files in other folders)
